--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -18,6 +18,7 @@
 
     .content-grid-item{
         grid-area: content;
+        margin-bottom: 80px;
     }
 }
   
